--- a/style.css
+++ b/style.css
@@ -1,20 +1,31 @@
 .grid {
-    width: 200px;
-    height: 200px;
-    display: flex;
-    flex-wrap: wrap;
-    border-style: solid;
+	width: 200px;
+	height: 200px;
+	display: flex;
+	flex-wrap: wrap;
+	border-style: solid;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
 
 .grid div {
-    width: 20px;
-    height: 20px;  
+	width: 20px;
+	height: 20px;
 }
 
 .snake {
-    background-color: blue;
+	background-color: blue;
 }
 
 .apple {
-    background-color: purple;
+	background-color: purple;
+}
+
+.start {
+	color: white;
+	background-color: rgb(27, 176, 240);
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+}
+
+.score {
+	font-weight: bold;
 }
